# quick-link

./: Cargo.toml  readme.md
src/: main.rs
src/open_graph/: mod.rs
templates/: badge.html.hbs
