[package]
name = "quick-link"
version = "0.1.0"
authors = ["Gustavo Blanco <gustavo.jr.blanco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
headless_chrome = "0.9.0"
failure = "0.1.8"
url = "2.2.1"
